Changes for 1.7.0

 - [DEV-9] added support of function macros (Sasha)
 - [DEV-422] updated the list of supported checks in the item configuration form (Dmitry)
 - [DEV-421] added additional parameter `maxlines' to `log[]' and `eventlog[]' checks (Dmitry)
 - [DEV-137] add AIX initscript for agentd by Faustino Ramos (Richlv)
 - [DEV-420] auto-discovery of multiple-IP devices (Sasha)
 - [DEV-419] added support of Basic Authentication for Web monitoring (Dmitry)
 - [DEV-325] new check for DNS `net.tcp.dns.query' wad added; added additional `type' parameter (Dmitry)
 - [DEV-416] new simple check `icmppingloss' added; ICMP ckecks now support additional parameters (Dmitry)
 - [DEV-9] added support of global, template and host level macros on the server side (Sasha)
 - [DEV-414] created basic man pages for all Zabbix binaries (Alexei)
 - [DEV-340] auto registration of active agents (Sasha)
 - [DEV-137] sql file "data.sql" was fixed, a default value was added (Dmitry)
 - [DEV-137] sql file "data.sql" was fixed, some default values were added (Dmitry)
 - [DEV-412] improved timeline in charts (Artem)
 - [DEV-353] Discovery: added support of IP masks (Sasha) 
 - [DEV-137] poller will continue processing of other items after enabling a host (Alexei)
 - [DEV-137] modifed Makefile to use tr instead of sed for better compatibility (Alexei)
 - [DEV-339] added a dummy function for DB cache monitoring (Alexei)
 - [DEV-411] database cache is enabled by default now (Alexei)
 - [DEV-399] added information about monitored hosts to the discovery screen (Sasha)
 - [DEV-358] added notification macros {NODE.*[1..9]} (Sasha)
 - [DEV-358] added notification macros {ITEM.LOG.*[1..9]} (Sasha)
 - [DEV-358] added notification macros {ITEM.VALUE} and {ITEM.VALUE[1..9]} (Sasha)
 - [DEV-358] added notification/trigger description macros {ITEM.LASTVALUE[1..9]} (Sasha)
 - [DEV-358] added notification macros {HOST.CONN[1..9]} {HOST.DNS[1..9]} {IPADDRESS[1..9]} (Sasha)